Fix headline + description overflow on .page

--- a/_includes/amigavision.css
+++ b/_includes/amigavision.css
@@ -294,6 +294,12 @@ margin: 60px 0;
 .page h2 {
 text-align: center;
 }
+.page .container > h2,
+.page .container > .subtext {
+max-width: 750px;
+margin-left: auto;
+margin-right: auto;
+}
 blockquote {
 padding: 18px 25px;
 margin: 0;
